Refactor and optimize code for better readability and immutability
Updated multiple classes to use `final` for constants and variables, simplified logic, reduced redundant code, and replaced verbose constructs with more concise alternatives such as `switch` expressions. These changes improve code clarity, immutability, and maintainability without altering functionality.